# dexterior

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  flake.nix
crates/dexterior/: Cargo.toml
crates/dexterior-core/: Cargo.toml
crates/dexterior-core/src/: cochain.rs  gmsh.rs  interpolate.rs  lib.rs  mesh.rs  operator.rs  permutation.rs  quadrature.rs
crates/dexterior-core/src/gmsh/: test_mesh_2d.geo  test_mesh_2d.msh  test_mesh_3d.geo  test_mesh_3d.msh
crates/dexterior-core/src/mesh/: mesh_construction.rs  subset.rs  views.rs
crates/dexterior-visuals/: Cargo.toml
crates/dexterior-visuals/src/: animation.rs  lib.rs  pipelines.rs  render_window.rs
crates/dexterior-visuals/src/pipelines/: axes.rs  line.rs  resources.rs  text.rs  vertex_colors.rs
crates/dexterior-visuals/src/shaders/: line_cap_oriented.wgsl  line_segment.wgsl  vertex_colors.wgsl
crates/dexterior/examples/: advection_2d.rs  elastic_2d.rs  membrane.rs  plane_wave_2d.rs  scatterer_2d.rs
crates/dexterior/examples/meshes/: 2d_layered.geo  2d_layered.msh  2d_square_pi_x_pi.geo  2d_square_pi_x_pi.msh  2d_star.geo  2d_star.msh
crates/dexterior/src/: lib.rs
examples/: membrane.rs  plane_wave_2d.rs
src/: cochain.rs  gmsh.rs  lib.rs  mesh.rs  operator.rs  simplicial_complex.rs  visuals.rs
src/mesh/: mesh_construction.rs
src/visuals/: animation.rs  pipelines.rs  render_window.rs
src/visuals/pipelines/: resources.rs  vertex_colors.rs  wireframe.rs
src/visuals/shaders/: wireframe.wgsl
visuals/: Cargo.toml
visuals/src/: animation.rs  camera.rs  color_map.rs  lib.rs  pipelines.rs  render_window.rs
visuals/src/pipelines/: axes.rs  line.rs  resources.rs  vertex_colors.rs  wireframe.rs
visuals/src/shaders/: flat_triangles.wgsl  line_join_unoriented.wgsl  line_segment.wgsl  vertex_colors.wgsl
