[workspace]
members = ["visuals"]

[workspace.package]
authors = ["Mikael Myyrä <mikael.b.myyra@jyu.fi>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
itertools = "0.11.0"
nalgebra = "0.32.3"
nalgebra-sparse = "0.9.0"
thiserror = "1.0.50"

[package]
name = "dexterior"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
itertools.workspace = true
nalgebra.workspace = true
nalgebra-sparse.workspace = true
thiserror.workspace = true
fixedbitset = "0.4.2"
mshio = "0.4.2"

[dev-dependencies]
approx = "0.5.1"
dexterior-visuals.path = "./visuals"
