[workspace]
members = ["crates/*", "run-wasm"]
default-members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Mikael Myyrä <mikael.b.myyra@jyu.fi>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/m0lentum/dexterior"

[workspace.dependencies]
itertools = "0.11.0"
nalgebra = "0.32.3"
nalgebra-sparse = "0.9.0"
thiserror = "1.0.50"
