[package]
name = "dexterior-visuals"
version = "0.1.0"
description = "Real-time visuals for dexterior, a Discrete Exterior Calculus toolkit"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dexterior-core = { path = "../dexterior-core", version = "0.1.0" }

itertools.workspace = true
nalgebra.workspace = true
nalgebra-sparse.workspace = true
thiserror.workspace = true
bytemuck = { version = "1.14.0", features = ["derive"] }
encase = { version = "0.6.1", features = ["nalgebra"] }
enterpolation = "0.2.1"
futures = "0.3.29"
palette = "0.7.3"
wgpu = "22.1.0"
winit = "0.30.5"
