[package]
name = "dexterior-visuals"
version = "0.2.0"
description = "Real-time visuals for dexterior, a Discrete Exterior Calculus toolkit"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dexterior-core = { path = "../dexterior-core", version = "0.2.0" }

itertools.workspace = true
nalgebra.workspace = true
nalgebra-sparse.workspace = true
thiserror.workspace = true
bytemuck = { version = "1.14.0", features = ["derive"] }
encase = { version = "0.6.1", features = ["nalgebra"] }
enterpolation = "0.2.1"
futures = "0.3.29"
palette = "0.7.3"
winit = "0.30.5"
web-time = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.wgpu]
version = "22.1.0"
default-features = true

# force webgl on wasm, even if webgpu is supported by the browser
[target.'cfg(target_arch = "wasm32")'.dependencies.wgpu]
version = "22.1.0"
default-features = false
features = ["webgl", "wgsl"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70" }
js-sys = "0.3.70"
wasm-bindgen-futures = "0.4.43"
console_error_panic_hook = "0.1.7"
log = "0.4"
console_log = "1"
